--- a/cart.html
+++ b/cart.html
@@ -210,9 +210,124 @@
                 </ul>
             </div>
         </header>
-        <main>
-
-        </main>
+            <main>
+                <section class="cart">
+                    <div class="sub-header">
+                        <div class="conteiner">
+                            <h1 class="sub-header__title">shopping cart</h1>
+                        </div>
+                    </div>
+                    <div class="cart__conteiner">
+                        <div class="cart-product">
+                            <h2 class="visually-hidden">Cart product</h2>
+                            <div class="cart-product__item">
+                                <img class="cart-product__item-img" src="img/man-products-2.png" alt="foto">
+                                <div class="cart-product__item-info">
+                                    <a class="cart-product__item-link" href="#">
+                                        <h3 class="cart-product__item-info-title">mango people t‑shirt</h3>
+                                    </a>
+                                    <p class="cart-product__item-info-text">Price: <span class="cart-product__item-info-text--price">$300</span>
+                                    </p>
+                                    <p class="cart-product__item-info-text">Color: <span class="cart-product__item-info-text--color">Red</span>
+                                    </p>
+                                    <p class="cart-product__item-info-text">Size: <span class="cart-product__item-info-text--size">Xl</span>
+                                    </p>
+                                    <label class="cart-product__item-info-text--label" for="order">
+                                        <p class="cart-product__item-info-text">Quantity:</p>
+                                        <input class="cart-product__item-info--input" min="1" max="9" type="number">
+                                    </label>
+                                </div>
+                                <div class="cart-product__item-cloes">
+                                    <button class="cart-product-item-cloes-button">
+                                        <svg width="18" height="18" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M7.4158 6.00409L11.7158 1.71409C11.9041 1.52579 12.0099 1.27039 12.0099 1.00409C12.0099 0.73779 
+                                            11.9041 0.482395 11.7158 0.294092C11.5275 0.105788 11.2721 0 11.0058 0C10.7395 0 10.4841 0.105788 
+                                            10.2958 0.294092L6.0058 4.59409L1.7158 0.294092C1.52749 0.105788 1.2721 -1.9841e-09 1.0058 0C0.739497 
+                                            1.9841e-09 0.484102 0.105788 0.295798 0.294092C0.107495 0.482395 0.0017066 0.73779 0.0017066 
+                                            1.00409C0.0017066 1.27039 0.107495 1.52579 0.295798 1.71409L4.5958 6.00409L0.295798 10.2941C0.20207 
+                                            10.3871 0.127676 10.4977 0.0769072 10.6195C0.0261385 10.7414 0 10.8721 0 11.0041C0 11.1361 0.0261385 
+                                            11.2668 0.0769072 11.3887C0.127676 11.5105 0.20207 11.6211 0.295798 11.7141C0.388761 11.8078 0.499362 
+                                            11.8822 0.621222 11.933C0.743081 11.9838 0.873786 12.0099 1.0058 12.0099C1.13781 12.0099 1.26852 
+                                            11.9838 1.39038 11.933C1.51223 11.8822 1.62284 11.8078 1.7158 11.7141L6.0058 7.41409L10.2958 11.7141C10.3888 
+                                            11.8078 10.4994 11.8822 10.6212 11.933C10.7431 11.9838 10.8738 12.0099 11.0058 12.0099C11.1378 12.0099 
+                                            11.2685 11.9838 11.3904 11.933C11.5122 11.8822 11.6228 11.8078 11.7158 11.7141C11.8095 11.6211 11.8839 
+                                            11.5105 11.9347 11.3887C11.9855 11.2668 12.0116 11.1361 12.0116 11.0041C12.0116 10.8721 11.9855 10.7414 
+                                            11.9347 10.6195C11.8839 10.4977 11.8095 10.3871 11.7158 10.2941L7.4158 6.00409Z" fill="#6F6E6E"></path>
+                                        </svg>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="cart-product__item">
+                                <img class="cart-product__item-img" src="img/man4-poducts.jpg" alt="foto">
+                                <div class="cart-product__item-info">
+                                    <h3 class="cart-product__item-info-title">mango people t‑shirt</h3>
+                                    <p class="cart-product__item-info-text">Price: <span class="cart-product__item-info-text--price">$300</span>
+                                    </p>
+                                    <p class="cart-product__item-info-text">Color: <span class="cart-product__item-info-text--color">Red</span>
+                                    </p>
+                                    <p class="cart-product__item-info-text">Size: <span class="cart-product__item-info-text--size">Xl</span>
+                                    </p>
+                                    <label class="cart-product__item-info-text--label" for="order">
+                                        <p class="cart-product__item-info-text">Quantity:</p>
+                                        <input class="cart-product__item-info--input" min="1" max="9" type="number">
+                                    </label>
+                                </div>
+                                <div class="cart-product__item-cloes">
+                                    <button class="cart-product-item-cloes-button">
+                                        <svg width="18" height="18" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M7.4158 6.00409L11.7158 1.71409C11.9041 1.52579 12.0099 1.27039 12.0099 1.00409C12.0099 0.73779 
+                                            11.9041 0.482395 11.7158 0.294092C11.5275 0.105788 11.2721 0 11.0058 0C10.7395 0 10.4841 0.105788 
+                                            10.2958 0.294092L6.0058 4.59409L1.7158 0.294092C1.52749 0.105788 1.2721 -1.9841e-09 1.0058 0C0.739497 
+                                            1.9841e-09 0.484102 0.105788 0.295798 0.294092C0.107495 0.482395 0.0017066 0.73779 0.0017066 
+                                            1.00409C0.0017066 1.27039 0.107495 1.52579 0.295798 1.71409L4.5958 6.00409L0.295798 10.2941C0.20207 
+                                            10.3871 0.127676 10.4977 0.0769072 10.6195C0.0261385 10.7414 0 10.8721 0 11.0041C0 11.1361 0.0261385 
+                                            11.2668 0.0769072 11.3887C0.127676 11.5105 0.20207 11.6211 0.295798 11.7141C0.388761 11.8078 0.499362 
+                                            11.8822 0.621222 11.933C0.743081 11.9838 0.873786 12.0099 1.0058 12.0099C1.13781 12.0099 1.26852 
+                                            11.9838 1.39038 11.933C1.51223 11.8822 1.62284 11.8078 1.7158 11.7141L6.0058 7.41409L10.2958 11.7141C10.3888 
+                                            11.8078 10.4994 11.8822 10.6212 11.933C10.7431 11.9838 10.8738 12.0099 11.0058 12.0099C11.1378 12.0099 
+                                            11.2685 11.9838 11.3904 11.933C11.5122 11.8822 11.6228 11.8078 11.7158 11.7141C11.8095 11.6211 11.8839 
+                                            11.5105 11.9347 11.3887C11.9855 11.2668 12.0116 11.1361 12.0116 11.0041C12.0116 10.8721 11.9855 10.7414 
+                                            11.9347 10.6195C11.8839 10.4977 11.8095 10.3871 11.7158 10.2941L7.4158 6.00409Z" fill="#6F6E6E"></path>
+                                        </svg>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="cart-product__actions">
+                                <button class="cart-product__actions-button">clear shopping cart</button>
+                                <button class="cart-product__actions-button">continue shopping</button>
+                            </div>
+                        </div>
+                        <form name="order" class="cart-form" action="#">
+                            <h2 class="visually-hidden">making an order</h2>
+                            <div class="cart-form__output">
+                                <h3 class="cart-form__output-title">shipping adress</h3>
+                                <label>
+                                    <input class="cart-form__output-input" type="text" placeholder="Bangladesh">
+                                    <span class="visually-hidden">city</span>
+                                </label>
+                                <label>
+                                    <input class="cart-form__output-input" type="text" placeholder="State">
+                                    <span class="visually-hidden">country</span>
+                                </label>
+                                <label>
+                                    <input class="cart-form__output-input" type="number" placeholder="Postcode / Zip">
+                                    <span class="visually-hidden">Postcode</span>
+                                </label>
+                                <button class="cart-form__output-button">get a quote</button>
+                            </div>
+                            <div class="cart-form__input">
+                                <h3 class="visually-hidden">total</h3>
+                                <p class="cart-form__input-sub">sub total<span class="cart-form__input-sub--price">$900</span></p>
+                                <p class="cart-form__input-grand">grand total<span class="cart-form__input-grand--price">$900</span></p>
+                                <hr class="cart-form__input-hr">
+                                <div class="cart-form__input-button-wrp">
+                                    <button class="cart-form__input-button">proceed to checkout</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </section>
+            </main>
         <footer>
             <div class="basement">
                 <div class="container">
